increasing the z-index of the fixed header to ensure any absolutely positioned elements outside of the header will always sit under it

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -9,7 +9,7 @@ $hero-banner-height-lrg: 380 !default;
 /* Start header */
 .header {
 	position: fixed;
-	z-index: 99;
+	z-index: 1000;
 	width: 100%;
 	border-bottom: 1px solid #bababa;
 
